View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025341 | Open CASCADE | OCCT:Visualization | public | 2014-10-08 17:32 | 2020-12-02 17:11 |
Reporter | Assigned To | apn | |||
Priority | low | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0025341: Visualization - disallow displaying object as part of connected one and as a free one at the same time | ||||
Description | When using some connection fucntionality objects may dissapear after enabling the texture. | ||||
Steps To Reproduce | Minimal test case:pload MODELING VISUALIZATION vinit box b 1.0 1.0 1.0 psphere s 0.5 vdisplay b s vconnect bs 2 0 0 b s vconnect bsc 6 0 0 bs vconnect bscc 10 0 0 bsc vfit vremove b Erasing of original interactive object results to low-level structures to point dead pointers. Original test case: pload ALL vinit box b 1 1 1 psphere s 0.5 vdisplay b s vsetlocation s 0 2.5 0 box d 0.5 0.5 3 box d2 0.5 3 0.5 vdisplay d d2 vfit vconnectto b1 -2 0 0 b vconnect z 2 0 0 b s vconnect z2 4 0 0 d d2 vconnect z3 6 0 0 z z2 vconnect z4 10 0 0 z3 z2 vfit vaddc z4 0 4 0 s vsetdispmode 1 vtexture b 5 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
related to | 0027957 | closed | apn | Open CASCADE | Visualization, AIS_InteractiveContext - protect from displaying the same AIS_InteractiveObject within multiple contexts |
has duplicate | 0030989 | new | vpozdyayev | Open CASCADE | Visualization - heap-use-after-free reported by Clang address sanitizer in OpenGl_Structure::IsRaytracable() |
related to | 0030675 | closed | bugmaster | Open CASCADE | Visualization - remove redundant proxy classes in hierarchy of PrsMgr_Presentation |
|
Technically this is not allowed combination displaying object as connected and as not connected at the same time. But it would be good to have some protection against this situation. |
|
Problem described in issue is reproduced on current state of OCCT. |
|
Branch CR25341 has been created by kgv. SHA-1: b42d52be3d950d3224f3de048f1c1b5e05dcf281 Detailed log of new commits: Author: kgv Date: Sat Sep 28 13:36:24 2019 +0300 0025341: Visualization - disallow displaying object as part of connected one and as a free one at the same time AIS_ConnectedInteractive::connect() now throws exception on connecting already displayed object. Commands vconnect, vconnectto and vaddconnected have been corrected to replace dispalyed AIS_Shape with AIS_ConnectedInteractive in context. |
|
Branch CR25341 has been updated forcibly by kgv. SHA-1: e7ef20af3933f899cd9eda3096cf0d513aa981d7 |
|
Branch CR25341 has been updated forcibly by kgv. SHA-1: 6c70e025309f7189dd6c22b5f5b423c819704a77 |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR25341-master-KGV/ |
|
Branch CR25341 reviewed without remarks. |
|
Combination - OCCT branch : CR25341 master SHA - 6c70e025309f7189dd6c22b5f5b423c819704a77 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : master SHA - cede13b0d79b1c3448ecd68f0db85c2a087762ad was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16720.70000000006 / 16808.79000000008 [-0.52%] Products Total CPU difference: 10565.860000000032 / 10573.91000000004 [-0.08%] Windows-64-VC14: OCCT Total CPU difference: 18248.828125 / 18298.78125 [-0.27%] Products Total CPU difference: 12479.015625 / 12507.671875 [-0.23%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR25341 has been deleted by kgv. SHA-1: 6c70e025309f7189dd6c22b5f5b423c819704a77 |
occt: master cc99be36 2019-09-28 10:36:24 Committer: apn Details Diff |
0025341: Visualization - disallow displaying object as part of connected one and as a free one at the same time AIS_ConnectedInteractive::connect() now throws exception on connecting already displayed object. AIS_TextLabel::AcceptDisplayMode() - added missing Display Mode filter. Commands vconnect, vconnectto and vaddconnected have been corrected to replace dispalyed AIS_Shape with AIS_ConnectedInteractive in context. |
Affected Issues 0025341 |
|
mod - src/AIS/AIS_ConnectedInteractive.cxx | Diff File | ||
mod - src/AIS/AIS_TextLabel.cxx | Diff File | ||
mod - src/AIS/AIS_TextLabel.hxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_ObjectCommands.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-10-08 17:32 |
|
New Issue | |
2014-10-08 17:32 |
|
Assigned To | => duv |
2014-10-20 18:29 | kgv | Steps to Reproduce Updated | |
2014-10-21 16:23 | kgv | Severity | major => minor |
2014-10-21 16:23 | kgv | Target Version | 6.8.0 => 7.1.0 |
2016-07-15 19:46 | kgv | Note Added: 0055972 | |
2016-07-15 19:46 | kgv | Priority | normal => low |
2016-10-13 16:20 | kgv | Relationship added | related to 0027957 |
2016-10-13 16:20 | kgv | Assigned To | duv => kgv |
2016-10-13 16:21 | kgv | Summary | Visualization: Objects dissapear after setting the texture => Visualization - disallow displaying object as part of connected one and as a free one at the same time |
2016-11-22 11:00 | kgv | Target Version | 7.1.0 => 7.2.0 |
2017-07-20 10:59 | kgv | Target Version | 7.2.0 => 7.4.0 |
2017-08-01 18:26 |
|
Test case number | => bugs vis bug25341_1, bug25341_2 |
2017-08-01 18:26 |
|
Note Added: 0069037 | |
2017-08-04 11:47 |
|
Test case number | bugs vis bug25341_1, bug25341_2 => Not needed |
2019-04-26 12:23 | kgv | Relationship added | related to 0030675 |
2019-09-04 15:43 | abv | Target Version | 7.4.0 => 7.5.0 |
2019-09-28 12:02 | kgv | Relationship added | related to 0030989 |
2019-09-28 12:03 | kgv | Relationship replaced | has duplicate 0030989 |
2019-09-28 13:36 | git | Note Added: 0087590 | |
2019-09-28 17:33 | git | Note Added: 0087591 | |
2019-09-28 17:37 | git | Note Added: 0087592 | |
2019-09-28 20:12 | kgv | Note Added: 0087594 | |
2019-09-28 20:12 | kgv | Assigned To | kgv => san |
2019-09-28 20:12 | kgv | Status | new => resolved |
2019-09-30 16:59 |
|
Note Added: 0087640 | |
2019-09-30 16:59 |
|
Assigned To | san => bugmaster |
2019-09-30 16:59 |
|
Status | resolved => reviewed |
2019-10-04 19:54 | apn | Note Added: 0087842 | |
2019-10-04 19:54 | apn | Status | reviewed => tested |
2019-10-23 01:07 | apn | Changeset attached | => occt master cc99be36 |
2019-10-23 01:07 | apn | Assigned To | bugmaster => apn |
2019-10-23 01:07 | apn | Status | tested => verified |
2019-10-23 01:07 | apn | Resolution | open => fixed |
2019-10-23 11:51 | git | Note Added: 0088444 | |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:11 | emo | Status | verified => closed |